objects/ssot__CareProgramEligibilityRule__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramEligibilityRuleStatus__c</fullName>
        <label>Care Program Eligibility Rule Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentEligibilityCriteriaId__c</fullName>
        <label>Enrollment Eligibility Criteria</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Eligibility Rule Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716666648363_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEligibilityRule_CareProgr_rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramEligibilityRule_CareProgr_rel</relationshipLabel>
        <relationshipName>rel_1716666648363_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726573683_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEligibilityRule_Enrollmen_rel</label>
        <referenceTo>ssot__EnrollmentEligibilityCriteria__dlm</referenceTo>
        <relationshipLabel>CareProgramEligibilityRule_Enrollmen_rel</relationshipLabel>
        <relationshipName>rel_1716726573683_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>